# AmaiGirl

./: .gitignore  CMakeLists.txt  CONTRIBUTING.en.md  CONTRIBUTING.md  NOTICE  README.en.md  README.md
.github/workflows/: super-linter.yml
cmake/: Info.plist.in  amaigirl.desktop
res/licenses/: THIRD_PARTY_LICENSES.md
src/ai/: ChatController.cpp  ChatController.hpp  OpenAIChatClient.cpp  OpenAIChatClient.hpp  OpenAITtsClient.cpp  OpenAITtsClient.hpp
src/app/: Version.hpp  main.cpp
src/common/: SettingsManager.cpp  SettingsManager.hpp  Utils.cpp  Utils.hpp
src/engine/: Model.cpp  Motion.cpp  Motion.hpp  Renderer.cpp  Renderer.hpp
src/ui/: AboutWindow.cpp  AboutWindow.hpp  ChatWindow.cpp  ChatWindow.hpp  SettingsWindow.cpp  SettingsWindow.hpp
